--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -520,6 +520,7 @@ en:
   permission_add_project: Create project
   permission_add_subprojects: Create subprojects
   permission_edit_project: Edit project
+  permission_publish_project: Publish project
   permission_close_project: Close / reopen the project
   permission_delete_project: Delete the project
   permission_select_project_modules: Select project modules
