--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -177,6 +177,7 @@ de:
   button_create_and_continue: Anlegen und weiter
   button_delete: Löschen
   button_delete_my_account: Mein Benutzerkonto löschen
+  button_delete_redirect: "Lösche Umleitung von %{page_title}"
   button_download: Herunterladen
   button_edit: Bearbeiten
   button_edit_associated_wikipage: "Zugehörige Wikiseite bearbeiten: %{page_title}"
