--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -683,7 +683,7 @@ en:
   label_min_max_length: Min - Max length
   label_list: List
   label_date: Date
-  label_timewithzone: Time With Zone
+  label_timestamp: DateTime (timezone aware)
   label_integer: Integer
   label_float: Float
   label_boolean: Boolean
