--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -420,6 +420,7 @@ en:
 
   setting_app_title: Application title
   setting_welcome_text: Welcome text
+  setting_banner_text: Banner text
   setting_default_language: Default language
   setting_login_required: Authentication required
   setting_self_registration: Self-registration
